<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Library">
    <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="@integer/mainFrameWeight"
        />
    <FrameLayout
        android:id="@+id/secondaryFrame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="@integer/secondaryFrameWeight"/>
</LinearLayout >