<?xml version="1.0" encoding="utf-8"?>
<fr.android.xhuberdeau.BookDetailView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bookDetailView">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
...
